# Jarvis-AI

./: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_remove_session_id.py
app/: __init__.py  main.py
app/api/routes/: chat.py  health.py
app/config/: constants.py  settings.py
app/database/: connection.py
app/models/: __init__.py  chat.py  chat_message.py
app/prompts/: __init__.py  base.py  search.py
app/schemas/: __init__.py  assistance_context.py  chat.py  chat_error.py  chat_message.py  chat_request.py  chat_response.py  llm_request.py  llm_response.py
app/services/: __init__.py  assistance_service.py  chat_service.py  langfuse_service.py  llm_service.py  web_search_service.py
cursor/rules/: commit.mdc
